2.7.5: allow user to import custom sheets: custom-chrome.css in chrome folder for userChrome; custom-content.css in resources/in-content/ for userContent; change scrollbar z-index to minimum 1 — please let me know if this causes problems anywhere by posting an issue; fix some issues on macOS; fix some issues with the bookmarks toolbar.

--- a/userChrome.ag.css
+++ b/userChrome.ag.css
@@ -12,7 +12,7 @@ scrollbar {
     position: relative;
     background-color: transparent;
     background-image: none;
-    z-index: 20;
+    z-index: 1;
     padding: 0px;
 }
 
@@ -104,7 +104,7 @@ scrollbar gripper {
     position: relative;
     background-color: transparent;
     padding: 0px;
-    z-index: 20;
+    z-index: 1;
 }
 
 .hidevscroll-scrollbar[orient="vertical"] {
